client/js/components/Modal/modal.scss
@import "../../../scss/_variables.scss";


.modal {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;

  display: flex;
  flex-direction: column;
  align-items: center;

  padding: 35px;

  overflow: auto;
  transition: all 500ms;
  visibility: visible;
  z-index: $z-modal;

  // when it's hidden
  &:not(.is-open) {
    opacity: 0;
    visibility: hidden;
    pointer-events: none; // so the user can't click it as it's fading away

    .modal__box {
      transform: translateY(18px);
    }
  }

}

.modal__overlay {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: rgba(black, 0.7);
}

.modal__box {
  position: relative;

  // vertically center the box
  margin-top: auto;
  margin-bottom: auto;

  color: #333;

  background-color: white;
  border: 1px solid $grey-ddd;
  border-radius: 6px;

  transform: translateY(0);
  transition: inherit;

}

.modal__title {
  position: relative;
  height: 40px;

  font-size: 18px;
  line-height: 40px;
  text-align: center;
}

.modal__content {
  padding: 0 20px 20px;
}

.modal__close {
  position: absolute;
  top: 0;
  right: 0;
  padding: 12px;
  line-height: 0;
  cursor: pointer;

  svg {
    fill: #333;
  }

  &:hover svg {
    fill: #900;
  }
}

